syntax = "proto3";

option go_package = "sigmaos/k8sutil/proto";

message CPUUtilRequest {
  string qoSClass = 1;
}

message CPUUtilResult {
  uint64 util = 1;
}
